Bug 31069 - program/program.c:799:33: warning: comparison between ‘gl_state_index’ and ‘enum <anonymous>’
Summary: program/program.c:799:33: warning: comparison between ‘gl_state_index’ and ‘e...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: All All
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-23 17:51 UTC by Vinson Lee
Modified: 2010-10-25 17:53 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-10-23 17:51:18 UTC
mesa: d8740b77ac30298c1742107e2afc4edabca562f0 (master)

$ make linux-dri-debug
...
gcc -c -o program/program.o program/program.c  -D_POSIX_SOURCE -D_POSIX_C_SOURCE=199309L -D_SVID_SOURCE -D_BSD_SOURCE -D_GNU_SOURCE -DPTHREADS -DUSE_EXTERNAL_DXTN_LIB=1 -DIN_DRI_DRIVER -DGLX_DIRECT_RENDERING -DGLX_INDIRECT_RENDERING -DHAVE_ALIAS -DHAVE_POSIX_MEMALIGN -I../../include -I../../src/glsl -I../../src/mesa -I../../src/mapi -I../../src/gallium/include -I../../src/gallium/auxiliary `pkg-config --cflags talloc`  -Wall -Wmissing-prototypes -std=c99 -O0 -g -fPIC -DDEBUG -fno-strict-aliasing
program/program.c: In function ‘_mesa_combine_programs’:
program/program.c:799:33: warning: comparison between ‘gl_state_index’ and ‘enum <anonymous>’


src/mesa/program/program.c
   794        for (i = 0; i < progB->Parameters->NumParameters; i++) {
   795           struct gl_program_parameter *p = &progB->Parameters->Parameters[i];
   796           if (p->Type == PROGRAM_STATE_VAR &&
   797               p->StateIndexes[0] == STATE_INTERNAL &&
   798               p->StateIndexes[1] == STATE_CURRENT_ATTRIB &&
   799               p->StateIndexes[2] == VERT_ATTRIB_COLOR0) {
   800              progB_inputsRead |= FRAG_BIT_COL0;
   801              progB_colorFile = PROGRAM_STATE_VAR;
   802              progB_colorIndex = i;
   803              break;
   804           }
Comment 1 Brian Paul 2010-10-25 08:19:03 UTC
I don't see that warning here (gcc 4.4.4) but I've committed a fix:  f72e4b306bb26b067b46f2d7561aabeb6f3f4be0
Comment 2 Vinson Lee 2010-10-25 17:53:43 UTC
mesa: 2d2bafdb30110e83b7e14017326a454d7e7f37f3 (master)

Verified fixed.

The warning occurred with gcc 4.5.1.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.