mesa: silence enum comparison warning

http://bugs.freedesktop.org/show_bug.cgi?id=31069